@@ -1,7 +1,6 @@
 (use-modules (snmp reports))
 (use-modules (ice-9 format))
 
-
 (init-reports)
 
 ;(session "localhost" "public" 
@@ -9,7 +8,15 @@
 ;      (format #t "~a ~a ~%" (iid description) (description))
 ;      (failure-cont)))
 
-(value (session (get sysDescr.0)))
+(define l3list (list "localhost"))
+
+(let ((router (one-of l3list)))
+  (session #:host router #:community "public"
+    (let* ((arp (walk sysORTable))
+           (id (% 1 (iid arp)))
+           (val (iid arp)))
+     (all (display val)(newline)))))
+
 
 
 
